test/corpus/expressions.txt
================
If expression
================

if (x) 1 else 2

---

(source_file
  (if_expression
    condition: (identifier)
    consequence: (integer)
    alternative: (integer)))

================
If without else
================

if (x) 1

---

(source_file
  (if_expression
    condition: (identifier)
    consequence: (integer)))

================
With expression
================

with (a) b

---

(source_file
  (with_expression
    subject: (identifier)
    body: (identifier)))

================
With body extends rightward through a binding
================

with (a) let x = 1; x

---

(source_file
  (with_expression
    subject: (identifier)
    body: (let_expression
      (let_binding
        name: (identifier)
        value: (integer))
      body: (identifier))))

================
Nested with expressions
================

with (a) with (b) c

---

(source_file
  (with_expression
    subject: (identifier)
    body: (with_expression
      subject: (identifier)
      body: (identifier))))

================
An identifier starting with `with` is not the keyword
================

let x = withParent(node)

---

(source_file
  (let_binding
    name: (identifier)
    value: (call_expression
      function: (identifier)
      (identifier))))

================
Let expression
================

let x = 1; x + 1

---

(source_file
  (let_expression
    (let_binding
      name: (identifier)
      value: (integer))
    body: (binary_expression
      left: (identifier)
      right: (integer))))

================
Function expression
================

fn(x: Int, y: Int) x + y

---

(source_file
  (fn_expression
    (fn_parameters
      (fn_parameter
        name: (identifier)
        type: (type_identifier))
      (fn_parameter
        name: (identifier)
        type: (type_identifier)))
    body: (binary_expression
      left: (identifier)
      right: (identifier))))

================
Function expression with untyped parameters
================

let increment: fn(Int) Int = fn(x) x + 1
export let pick = fn(x, y: Int) x

---

(source_file
  (let_binding
    name: (identifier)
    type: (fn_type
      (type_identifier)
      return_type: (type_identifier))
    value: (fn_expression
      (fn_parameters
        (fn_parameter
          name: (identifier)))
      body: (binary_expression
        left: (identifier)
        right: (integer))))
  (export_statement
    (let_binding
      name: (identifier)
      value: (fn_expression
        (fn_parameters
          (fn_parameter
            name: (identifier))
          (fn_parameter
            name: (identifier)
            type: (type_identifier)))
        body: (identifier)))))

================
Generic function expression
================

fn<T>(x: T) x

---

(source_file
  (fn_expression
    (type_parameters
      (type_parameter
        name: (identifier)))
    (fn_parameters
      (fn_parameter
        name: (identifier)
        type: (type_identifier)))
    body: (identifier)))

================
Property access
================

obj.field.nested

---

(source_file
  (property_access
    object: (property_access
      object: (identifier)
      property: (identifier))
    property: (identifier)))

================
Optional chaining
================

obj?.field

---

(source_file
  (property_access
    object: (identifier)
    (optional_chain)
    property: (identifier)))

================
Optional chaining mixed with plain access and calls
================

obj?.a.b?.c()?.d

---

(source_file
  (property_access
    object: (call_expression
      function: (property_access
        object: (property_access
          object: (property_access
            object: (identifier)
            (optional_chain)
            property: (identifier))
          property: (identifier))
        (optional_chain)
        property: (identifier)))
    (optional_chain)
    property: (identifier)))

================
Optional chaining coalesced
================

let name = user?.name ?? "anonymous"

---

(source_file
  (let_binding
    name: (identifier)
    value: (binary_expression
      left: (property_access
        object: (identifier)
        (optional_chain)
        property: (identifier))
      right: (string
        (string_content)))))

================
Optional chaining on an optional-typed binding
================

let x: {name: Str}? = nil
export let r = x?.name

---

(source_file
  (let_binding
    name: (identifier)
    type: (optional_type
      (record_type
        (record_type_field
          name: (identifier)
          type: (type_identifier))))
    value: (nil))
  (export_statement
    (let_binding
      name: (identifier)
      value: (property_access
        object: (identifier)
        (optional_chain)
        property: (identifier)))))

================
Function call
================

foo(1, 2)

---

(source_file
  (call_expression
    function: (identifier)
    (integer)
    (integer)))

================
Method call
================

Container.Image({ name: "test" })

---

(source_file
  (call_expression
    function: (property_access
      object: (identifier)
      property: (identifier))
    (record
      (record_field
        name: (identifier)
        value: (string
          (string_content))))))

================
Indexed access
================

xs[0]

---

(source_file
  (indexed_access
    object: (identifier)
    index: (integer)))

================
Indexed access with string key on a property
================

pod.networkAddresses["app0"]

---

(source_file
  (indexed_access
    object: (property_access
      object: (identifier)
      property: (identifier))
    index: (string
      (string_content))))

================
Chained indexed access
================

grid[i][j]

---

(source_file
  (indexed_access
    object: (indexed_access
      object: (identifier)
      index: (identifier))
    index: (identifier)))

================
Indexed access on a call result
================

f(x)[0]

---

(source_file
  (indexed_access
    object: (call_expression
      function: (identifier)
      (identifier))
    index: (integer)))

================
List literal after expression is not a subscript
================

xs [0]

---

(source_file
  (identifier)
  (list
    (integer)))

================
Parenthesized expression
================

(1 + 2)

---

(source_file
  (parenthesized_expression
    (binary_expression
      left: (integer)
      right: (integer))))

================
Type cast
================

x as Int

---

(source_file
  (type_cast
    expression: (identifier)
    type: (type_identifier)))

================
Type cast with optional
================

nil as Int?

---

(source_file
  (type_cast
    expression: (nil)
    type: (optional_type
      (type_identifier))))

================
Extern expression
================

extern "Std/Encoding.toJson": fn(Any) Str

---

(source_file
  (extern_expression
    name: (string
      (string_content))
    type: (fn_type
      (type_identifier)
      return_type: (type_identifier))))

================================================================================
Atom literal
================================================================================

let mode = .prod

--------------------------------------------------------------------------------

(source_file
  (let_binding
    name: (identifier)
    value: (atom
      label: (identifier))))

================================================================================
Atoms as call arguments
================================================================================

let x = f(.a, .b)

--------------------------------------------------------------------------------

(source_file
  (let_binding
    name: (identifier)
    value: (call_expression
      function: (identifier)
      (atom
        label: (identifier))
      (atom
        label: (identifier)))))

================================================================================
Property access wins over atom
================================================================================

x.name

--------------------------------------------------------------------------------

(source_file
  (property_access
    object: (identifier)
    property: (identifier)))

================================================================================
Tagged atom literal
================================================================================

let tagged = .ok(1, "hi")

--------------------------------------------------------------------------------

(source_file
  (let_binding
    name: (identifier)
    value: (atom
      label: (identifier)
      (atom_payload
        (integer)
        (string
          (string_content))))))

================================================================================
Nested tagged atom
================================================================================

let nested = .wrap(.inner)

--------------------------------------------------------------------------------

(source_file
  (let_binding
    name: (identifier)
    value: (atom
      label: (identifier)
      (atom_payload
        (atom
          label: (identifier))))))
